--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,12 @@ android {
 dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // retrofitのGsonconverter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
